Perkin-UAT/force-app/main/default/objects/Salesforce_License_Count__c/Salesforce_License_Count__c.object-meta.xml
<CustomObject>
    <description>Custom object to keep track of salesforce licence count whenever a user is created or deactivated</description>
    <label>User License Count</label>
    <nameField>
        <label>Salesforce License Count Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Licenses Count</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>