Perkin-UAT/force-app/main/default/objects/Salesforce_License_Count__c/fields/Activated_By__c.field-meta.xml
<CustomField>
    <fullName>Activated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user license activated by</description>
    <label>Created/Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Salesforce_Licenses_Count</relationshipName>
    <type>Lookup</type>
</CustomField>