Perkin-UAT/force-app/main/default/objects/Salesforce_License_Count__c/fields/Created_or_Activated__c.field-meta.xml
<CustomField>
    <fullName>Created_or_Activated__c</fullName>
    <label>Created or Activated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>