Perkin-UAT/force-app/main/default/objects/Salesforce_License_Count__c/fields/Remaining_Salesforce_License__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Salesforce_License__c</fullName>
    <label>Remaining Salesforce License</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>