Perkin-UAT/force-app/main/default/objects/Salesforce_License_Count__c/fields/Total_salesforce_license__c.field-meta.xml
<CustomField>
    <fullName>Total_salesforce_license__c</fullName>
    <label>Total salesforce license</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>