Perkin-UAT/force-app/main/default/objects/Salesforce_License_Count__c/fields/Type_of_license__c.field-meta.xml
<CustomField>
    <fullName>Type_of_license__c</fullName>
    <label>Type of license</label>
    <length>255</length>
    <type>Text</type>
</CustomField>