Perkin-UAT/force-app/main/default/objects/Salesforce_License_Count__c/fields/User_Created_Activated__c.field-meta.xml
<CustomField>
    <fullName>User_Created_Activated__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User created or activated</description>
    <label>User Created/Activated</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Salesforce_Licenses_Count1</relationshipName>
    <type>Lookup</type>
</CustomField>